--- a/src/components/pages/AboutUs/AboutUs.scss
+++ b/src/components/pages/AboutUs/AboutUs.scss
@@ -1,13 +1,8 @@
 @import "/src/styles/utils/mixins";
 
 .hero {
-   margin-block: 100px;
-   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-linear-gradient(0deg, #022439, #022439);
-
-   @include responsive(md) {
-      margin-block: 80px;
-   }
+   margin: 0px;
+   padding: 32px 32px 72px 32px;
    .title-wrapper {
       display: flex;
       justify-content: center;
@@ -15,17 +10,38 @@ linear-gradient(0deg, #022439, #022439);
       flex-direction: column;
       max-width: 1008px;
       margin-inline: auto;
-
       div:nth-child(1) {
-         margin-bottom: 16px;
+         font-size: 12px;
+         margin-bottom: 12px;
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
       }
 
       div:nth-child(2) {
-         margin-bottom: 40px;
+         font-size: 32px;
+
+         @media all and (min-width: 400px) {
+            font-size: 40px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 48px;
+         }
       }
 
       p {
-         max-width: 464px;
+         font-size: 12px;
+         margin-top: 28px;
+         max-width: 430px;
+
+         @media all and (min-width: 400px) {
+            font-size: 14px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
       }
    }
 }
