--- a/src/components/pages/AboutUs/Team/team.scss
+++ b/src/components/pages/AboutUs/Team/team.scss
@@ -1,114 +1,168 @@
 .testimonials_container {
-    margin-block: 0 !important;
-    padding-top: 100px !important;
-    background: #050C0B !important;
-    padding-bottom: 4px;
+   margin-block: 0 !important;
+   padding-top: 100px !important;background: rgb(1,18,28);
+   background: -moz-linear-gradient(180deg, rgba(1,18,28,1) 0%, rgba(5,12,11,1) 14%);
+   background: -webkit-linear-gradient(180deg, rgba(1,18,28,1) 0%, rgba(5,12,11,1) 14%);
+   background: linear-gradient(180deg, rgba(1,18,28,1) 0%, rgba(5,12,11,1) 14%);
+   padding-bottom: 80px;
 
-    @media screen and (max-width: 767px) {
-      // margin-block: 120px;
-    }
- }
- 
- .about_carousel {
-    margin-block: 3.5rem;
-    padding: 0 120px;
-    @media screen and (max-width: 767px) {
-      padding:32px;
-    }
- }
- 
- .testimonial-card {
-    border-radius: 16px;
-    border: 1px solid rgba(255, 255, 255, 0.05);
-    background: linear-gradient(
-       180deg,
-       rgba(255, 255, 255, 0) -17.2%,
-       rgba(255, 255, 255, 0.07) 140.9%
-    );
-    backdrop-filter: blur(10px);
+   .testimonial_content_container {
+      .title-wrapper {
+         p {
+            margin-bottom: 5px;
+         }
 
-    padding: 2rem;
-    text-align: center;
-    margin-inline: 0.5rem;
-   //  height: 252px;
-    @media screen and (max-width: 767px) {
-      // width:294px;
-    }
- 
-    * {
-       margin: 0;
-       padding: 0;
-    }
- 
-    .image {
-       max-width: 72px;
-       aspect-ratio: 1 / 1;
-       border-radius: 100%;
-       margin-inline: auto;
-    }
- 
-    .testimonial-person {
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       flex-direction: column;
-       gap: 0.8rem;
-    }
- 
-    .rating {
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       gap: 2px;
- 
-       img {
-          width: 1rem;
-          aspect-ratio: 1 / 1;
-       }
-    }
- }
- 
- @media screen and (max-width: 767px) {
-    .testimonial-card {
-       padding: 20px 20px;
-       gap: 25px;
-       text-align: center;
-       margin: 0 2px;
-       border-radius: 24px;
-    }
-    .partners_container .partner_content_container .heading {
-       font-size: 12px;
-    }
-    .partners_container .partner_content_container .sub_title {
-       font-size: 24px;
-    }
-    .partners_container {
-       padding: 88px 32px;
-    }
- }
- 
- .testimonials_container {
-    .owl-dots button.owl-dot {
-       margin-top: 1.5rem;
- 
-       @media screen and (max-width: 768px) {
-          margin-top: 0.5rem;
-       }
- 
-       span {
-          width: 0.7rem;
-          height: 0.7rem;
-          margin-inline: 4px;
-          border-radius: 0;
-          clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-          opacity: 0.5;
-       }
-    }
-    .owl-dots button.owl-dot.active span {
-       background: #e5be20;
-       opacity: 1;
-    }
-    .owl-nav button {
+         p:nth-child(1) {
+            font-size: 12px;
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
+            }
+         }
+
+         p:nth-child(2) {
+            font-size: 20px;
+
+            @media all and (min-width: 400px) {
+               font-size: 24px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 32px;
+            }
+         }
+      }
+   }
+}
+
+.about_carousel {
+   margin-top: 50px;
+}
+
+.testimonial-card {
+   height: 100%;
+   width: auto;
+   margin: 0 2px;
+   padding: 12px;
+   text-align: center;
+   gap: 25px;
+   border: 1px solid rgba(255, 255, 255, 0.05);
+   border-radius: 16px;
+   background: linear-gradient(180deg,
+         rgba(255, 255, 255, 0) -17.2%,
+         rgba(255, 255, 255, 0.07) 140.9%);
+   backdrop-filter: blur(10px);
+
+   @media all and (min-width: 400px) {
+      padding: 20px;
+   }
+
+   @media all and (min-width: 1200px) {
+      padding: 40px;
+   }
+
+   p {
+      margin-bottom: 0px;
+   }
+   
+   .testimonial-it-is {
+      font-size: 12px;
+      font-weight: 500;
+
+      @media all and (min-width: 400px) {
+         font-size: 14px
+      }
+
+      @media all and (min-width: 992px) {
+         font-size: 16px;
+      }
+   }
+
+   .image {
+      max-width: 60px;
+      aspect-ratio: 1 / 1;
+      border-radius: 50%;
+      margin-inline: auto;
+   }
+
+   .testimonial-person {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 0.8rem;
+
+      .testimonial-text {
+         p {
+            margin-bottom: 0px;
+         }
+         p:nth-child(1) {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+
+            @media all and (min-width: 400px) {
+               font-size: 18px
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 20px;
+            }
+         }
+
+         p:nth-child(2) {
+            font-size: 10px;
+            line-height: 150%;
+            text-align: center;
+            font-weight: 400;
+            line-height: normal;
+            color: #D9D9D9;
+
+            @media all and (min-width: 768px) {
+               font-size: 12px;
+            }
+         }
+      }
+   }
+
+   .rating {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 2px;
+
+      img {
+         width: 1rem;
+         aspect-ratio: 1 / 1;
+      }
+   }
+}
+
+.testimonials_container {
+   .owl-stage {
+      display: flex;
+   }
+   
+   .owl-dots button.owl-dot {
+      margin-top: 0.5rem;
+
+      span {
+         width: 0.7rem;
+         height: 0.7rem;
+         margin-inline: 4px;
+         border-radius: 0;
+         clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+         opacity: 0.5;
+      }
+   }
+
+   .owl-dots button.owl-dot.active span {
+      background: #e5be20;
+      opacity: 1;
+   }
+
+   .owl-nav button {
       width: 40px;
       height: 40px;
       padding: 120px !important;
@@ -121,17 +175,18 @@
       position: absolute;
       top: calc(50% - 35px);
    }
-      .owl-nav button span {
+
+   .owl-nav button span {
       color: #F8F8F8;
       opacity: 0.7;
-      font-size: 33px;
-      line-height: 20px;
-      }
-      .owl-nav .owl-prev {
-         left: -12px;
-      }
-      .owl-nav .owl-next {
-         right: -12px;
-      }
- }
- 
+      font-size: 20px;
+   }
+
+   .owl-nav .owl-prev {
+      left: -12px;
+   }
+
+   .owl-nav .owl-next {
+      right: -12px;
+   }
+}
