--- a/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
+++ b/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
@@ -1,41 +1,77 @@
 .about_why-barasingha-wrapper {
-    //margin-block: 200px 160px;
-    padding-top: 64px;
-    padding:56px, 120px, 88px, 120px;
-    background: linear-gradient(180deg, rgba(1, 18, 28, 0) 0%, #060D0B 100%);
-    
-    @media screen and (max-width: 767px) {
-       //margin-block: 120px;
-    }
-
+   position: relative;
     .cubeImage{
          position: absolute;
-         right: 120px;
-         top: 444px;
-         @media screen and (max-width: 767px) {
-            position: absolute;
-            right: 19px;
-            top: 340px;
-            height: 81px;
-            width: 94px;
+         right: 0px;
+         top: -50px;
+         height: 36px;
+         width: 52px;
+
+         @media all and (min-width: 768px) {
+            height: 60px;
+            width: 100px
+         }
+
+         @media all and (min-width: 992px) {
+            top: -60px;
+            height: 100px;
+            width: 160px;
          }
     }
  
     .title-wrapper {
-       p {
-          max-width: 500px;
-          margin-inline: auto;
-       }
+      max-width: 480px;
+      margin-inline: auto;
+      @media all and (min-width: 400px) {
+         padding-inline: 24px;
+      }
+      p:nth-child(1) {
+         font-size: 12px;
+
+         @media all and (min-width: 400px) {
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+
+      }
+
+      p:nth-child(2) {
+         font-size: 20px;
+         
+         @media all and (min-width: 400px) {
+           font-size: 24px; 
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
+
+      p:nth-child(3) {
+         font-size: 12px;
+
+         @media all and (min-width: 400px) {
+            font-size: 14px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+
+      p {
+         max-width: 500px;
+         margin-inline: auto;
+      }
     }
     .WhyHow_why_how_carousel{
     margin-block: 3.5rem;
       padding: 0 120px;
-      @media screen and (max-width: 767px) {
-        padding:32px;
-      }
    }
     .benefits-container {
-       padding-top: 100px;
+       padding-top: 50px;
        display: flex;
        justify-content: center;
        align-items: center;
@@ -47,49 +83,74 @@
           align-items: flex-start;
           flex: 1;
           align-self: stretch;
-          min-width: 200px;
           .benefits-card {
              display: flex;
              flex-direction: column;
              gap: 0.5rem;
- 
              img {
                 max-width: 4rem;
                 aspect-ratio: 1 / 1;
              }
              .heading {
-                margin-top: 1.75rem;
+               margin-top: 1.75rem;
+               font-size: 16px;
+               @media all and (min-width: 400px) {
+                  font-size: 18px;
+               }
+               @media all and (min-width: 992px) {
+                  font-size: 20px;
+               }
              }
              .para {
-                font-size: 1rem !important;
+                font-size: 12px;
                 margin-bottom: 0.5rem;
+               @media all and (min-width: 400px) {
+                  font-size: 14px;
+               }
+
+               @media all and (min-width: 992px) {
+                  font-size: 16px;
+               }
              }
              .link {
+               display: flex;
                 * {
                    color: #e5be20;
                 }
-                span {
-                   border-bottom: 1px solid transparent;
-                   line-height: 150%; /* 24px */
-                   @media screen and (max-width: 767px) {
-                     float: left;
+               span {
+                  display: block;
+                  border-bottom: 1px solid transparent;
+                  line-height: 150%; /* 24px */
+                  font-size: 12px;
+                  @media all and (min-width: 400px) {
+                     font-size: 14px;
                   }
-                }
-                .arrow {
-                   padding-left: 10px;
-                   @media screen and (max-width: 767px) {
-                     height: 10px;
-                     width: 10px;
-                     float: left;
-                     padding-top: 10px;
+
+                  @media all and (min-width: 992px) {
+                     font-size: 16px;
                   }
-                }
+               }
+               .arrow {
+                  display: block;
+                  padding-left: 10px;
+                  height: 20px;
+                  width: 20px;
+                  @media all and (min-width: 400px) {
+                     height: 22px;
+                     width: 22px;
+                  }
+
+                  @media all and (min-width: 992px) {
+                     height: 24px;
+                     width: 24px;
+                  }
+               }
  
-                &:hover {
-                   span {
-                      border-bottom: 1px solid #e5be20;
-                   }
-                }
+               &:hover {
+                  span {
+                     border-bottom: 1px solid #e5be20;
+                  }
+               }
              }
           }
        }
@@ -99,11 +160,6 @@
  .about_why-barasingha-wrapper  {
    .owl-dots button.owl-dot {
       margin-top: 1.5rem;
-
-      @media screen and (max-width: 768px) {
-         margin-top: 0.5rem;
-      }
-
       span {
          width: 0.7rem;
          height: 0.7rem;
