--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -1,38 +1,61 @@
 .career_project_container {
-   padding-top: 100px;  
-   @media screen and (max-width: 767px) {
-      //margin-block: 120px;
-   }
+   padding-block: 32px 56px;
    background: #01121c;
-   padding-bottom: 150px;
+
+   @media all and (min-width: 768px) {
+      padding-block: 50px 80px;
+   }
+
+   .title-wrapper {
+      p {
+         margin-bottom: 5px;
+      }
+
+      p:nth-child(1) {
+         font-size: 12px;
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+
+      p:nth-child(2) {
+         font-size: 20px;
+
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
+   }
 
    .projects {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
       gap: 2rem;
       margin-top: 3.5rem;
-      @media (max-width: 768px) {
-         grid-template-columns: 1fr;
+
+      @media all and (min-width: 768px) {
+         grid-template-columns: 1fr 1fr;
       }
+
       .project-card {
          width: auto;
-         // height: 475px;
          display: flex;
          flex-direction: column;
          gap: 0.5rem;
-         padding: 2.5rem;
+         padding: 20px;
          border-radius: 1rem;
          border: 1px solid rgba(#fff, 0.05);
-         background: radial-gradient(
-            157.56% 157.56% at 50% 65.71%,
-            rgba(255, 255, 255, 0.07) 0%,
-            rgba(0, 0, 0, 0) 100%
-         );
-         @media (max-width: 768px) {
-            // height: 350px;
-            align-items: center;
-         }
+         background: radial-gradient(157.56% 157.56% at 50% 65.71%,
+               rgba(255, 255, 255, 0.07) 0%,
+               rgba(0, 0, 0, 0) 100%);
+         align-items: center;
          backdrop-filter: blur(10px);
+
          .image-card {
             img {
                width: 100%;
@@ -42,42 +65,48 @@
                aspect-ratio: 16/10;
                height: auto;
             }
-            @media (max-width: 768px) {
-               height: auto;
-               width: auto;
-            }
+
+            height: auto;
+            width: auto;
          }
 
          .heading {
-            font-size: 24px;
+            font-size: 16px;
             font-weight: 500;
             max-width: 60%;
-            @media (max-width: 768px) {
-               max-width: 100%;
-               display: flex;
-               text-align: center;
+            max-width: 100%;
+            display: flex;
+            text-align: center;
+            @media all and (min-width: 400px) {
+               font-size: 18px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 20px;
             }
          }
 
          .para {
-            max-width: 90%;
-            @media (max-width: 768px) {
-               display: flex;
-               text-align: center;
+            font-size: 12px;
+            display: flex;
+            text-align: center;
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
             }
          }
 
-         @media screen and (max-width: 400px) {
-            .heading {
-               max-width: 90%;
-            }
+         .heading {
+            max-width: 90%;
          }
+
          &:hover {
-            background: radial-gradient(
-               185.16% 185.16% at 50% 0%,
-               rgba(0, 31, 41, 0.75) 0%,
-               #022032 100%
-            ) !important;
+            background: radial-gradient(185.16% 185.16% at 50% 0%,
+                  rgba(0, 31, 41, 0.75) 0%,
+                  #022032 100%) !important;
          }
       }
    }
