--- a/src/components/pages/Career/Testimonials/testimonials.scss
+++ b/src/components/pages/Career/Testimonials/testimonials.scss
@@ -1,49 +1,85 @@
 .career_testimonials_container {
    margin-block: 0 !important;
-   padding-top: 100px !important;
-   background: #050C0B !important;
-   padding-bottom: 4px;
+   padding-top: 100px !important;background: rgb(1,18,28);
+   background: #050C0B; 
+   padding-bottom: 80px;
 
-   @media screen and (max-width: 767px) {
-     // margin-block: 120px;
+   .testimonial_content_container {
+      .title-wrapper {
+         p {
+            margin-bottom: 5px;
+         }
+
+         p:nth-child(1) {
+            font-size: 12px;
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
+            }
+         }
+
+         p:nth-child(2) {
+            font-size: 20px;
+
+            @media all and (min-width: 400px) {
+               font-size: 24px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 32px;
+            }
+         }
+      }
    }
 }
 
 .career_carousel {
-   margin-block: 3.5rem;
-   padding: 0 120px;
-   @media screen and (max-width: 767px) {
-     padding:32px;
-   }
+   margin-top: 50px;
 }
 
 .career_testimonial-card {
-   border-radius: 16px;
+   height: 100%;
+   width: auto;
+   margin: 0 2px;
+   padding: 12px;
+   text-align: center;
+   gap: 25px;
    border: 1px solid rgba(255, 255, 255, 0.05);
-   background: linear-gradient(
-      180deg,
-      rgba(255, 255, 255, 0) -17.2%,
-      rgba(255, 255, 255, 0.07) 140.9%
-   );
+   border-radius: 16px;
+   background: linear-gradient(180deg,
+         rgba(255, 255, 255, 0) -17.2%,
+         rgba(255, 255, 255, 0.07) 140.9%);
    backdrop-filter: blur(10px);
 
-   padding: 2rem;
-   text-align: center;
-   margin-inline: 0.5rem;
-   height: 300px;
-   @media screen and (max-width: 767px) {
-      max-width: 750px;
+   @media all and (min-width: 400px) {
+      padding: 20px;
    }
 
-   * {
-      margin: 0;
-      padding: 0;
+   @media all and (min-width: 1200px) {
+      padding: 40px;
+   }
+
+   p {
+      margin-bottom: 0px;
+   }
+   
+   .testimonial-it-is {
+      font-size: 12px;
+      font-weight: 500;
+      margin-top: 0.8rem;
+      @media all and (min-width: 400px) {
+         font-size: 14px
+      }
+
+      @media all and (min-width: 992px) {
+         font-size: 16px;
+      }
    }
 
    .image {
-      max-width: 72px;
+      max-width: 60px;
       aspect-ratio: 1 / 1;
-      border-radius: 100%;
+      border-radius: 50%;
       margin-inline: auto;
    }
 
@@ -53,6 +89,39 @@
       align-items: center;
       flex-direction: column;
       gap: 0.8rem;
+
+      .testimonial-text {
+         p {
+            margin-bottom: 0px;
+         }
+         p:nth-child(1) {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+
+            @media all and (min-width: 400px) {
+               font-size: 18px
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 20px;
+            }
+         }
+
+         p:nth-child(2) {
+            font-size: 10px;
+            line-height: 150%;
+            text-align: center;
+            font-weight: 400;
+            line-height: normal;
+            color: #D9D9D9;
+
+            @media all and (min-width: 992px) {
+               font-size: 12px;
+            }
+         }
+      }
    }
 
    .rating {
@@ -68,32 +137,13 @@
    }
 }
 
-@media screen and (max-width: 767px) {
-   .testimonial-card {
-      padding: 20px 10px;
-      gap: 25px;
-      text-align: center;
-      margin: 0 2px;
-      border-radius: 24px;
-   }
-   .partners_container .partner_content_container .heading {
-      font-size: 12px;
-   }
-   .partners_container .partner_content_container .sub_title {
-      font-size: 24px;
-   }
-   .partners_container {
-      padding: 88px 32px;
-   }
-}
-
 .career_testimonials_container {
+   .owl-stage {
+      display: flex;
+   }
+   
    .owl-dots button.owl-dot {
-      margin-top: 1.5rem;
-
-      @media screen and (max-width: 768px) {
-         margin-top: 0.5rem;
-      }
+      margin-top: 0.5rem;
 
       span {
          width: 0.7rem;
@@ -104,33 +154,37 @@
          opacity: 0.5;
       }
    }
+
    .owl-dots button.owl-dot.active span {
       background: #e5be20;
       opacity: 1;
    }
+
    .owl-nav button {
-     width: 40px;
-     height: 40px;
-     padding: 120px !important;
-     border-radius: 100px !important;
-     border: 1px solid #04121B !important;
-     background: #101D24 !important;
-     box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.20);
-     backdrop-filter: blur(10px);
-     margin: 0 !important;
-     position: absolute;
-     top: calc(50% - 35px);
-  }
-     .owl-nav button span {
-     color: #F8F8F8;
-     opacity: 0.7;
-     font-size: 33px;
-     line-height: 20px;
-     }
-     .owl-nav .owl-prev {
-        left: -12px;
-     }
-     .owl-nav .owl-next {
-        right: -12px;
-     }
+      width: 40px;
+      height: 40px;
+      padding: 120px !important;
+      border-radius: 100px !important;
+      border: 1px solid #04121B !important;
+      background: #101D24 !important;
+      box-shadow: 0px 0px 250px 0px rgba(0, 0, 0, 0.20);
+      backdrop-filter: blur(10px);
+      margin: 0 !important;
+      position: absolute;
+      top: calc(50% - 35px);
+   }
+
+   .owl-nav button span {
+      color: #F8F8F8;
+      opacity: 0.7;
+      font-size: 20px;
+   }
+
+   .owl-nav .owl-prev {
+      left: -12px;
+   }
+
+   .owl-nav .owl-next {
+      right: -12px;
+   }
 }
