--- a/src/components/pages/Career/WhyHow/career_WhyHow.scss
+++ b/src/components/pages/Career/WhyHow/career_WhyHow.scss
@@ -1,14 +1,49 @@
 .why-barasingha-wrapper {
-   //margin-block: 80px 160px;
    background: linear-gradient(180deg, rgba(5, 12, 11, 0.00) 0%, #050C0B 100%);
 
-
-
-   @media screen and (max-width: 767px) {
-      //margin-block: 120px;
-   }
-
    .title-wrapper {
+      max-width: 480px;
+      margin-inline: auto;
+
+      @media all and (min-width: 400px) {
+         padding-inline: 24px;
+      }
+
+      p:nth-child(1) {
+         font-size: 12px;
+
+         @media all and (min-width: 400px) {}
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+
+      }
+
+      p:nth-child(2) {
+         font-size: 20px;
+
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
+
+      p:nth-child(3) {
+         font-size: 12px;
+
+         @media all and (min-width: 400px) {
+            font-size: 14px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+
       p {
          max-width: 500px;
          margin-inline: auto;
@@ -16,20 +51,20 @@
    }
 
    .benefits-container {
-      padding-top: 100px;
-      padding-bottom: 80px;
+      padding-top: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       gap: 3rem 5rem;
+
       .benefits {
          display: flex;
          flex-direction: column;
          align-items: flex-start;
          flex: 1;
          align-self: stretch;
-         min-width: 200px;
+
          .benefits-card {
             display: flex;
             flex-direction: column;
@@ -39,31 +74,70 @@
                max-width: 4rem;
                aspect-ratio: 1 / 1;
             }
+
             .heading {
-               margin-top: 1rem;
+               margin-top: 1.75rem;
+               font-size: 16px;
+
+               @media all and (min-width: 400px) {
+                  font-size: 18px;
+               }
+
+               @media all and (min-width: 992px) {
+                  font-size: 20px;
+               }
             }
+
             .para {
-               font-size: 1rem !important;
+               font-size: 12px;
                margin-bottom: 0.5rem;
+
+               @media all and (min-width: 400px) {
+                  font-size: 14px;
+               }
+
+               @media all and (min-width: 992px) {
+                  font-size: 16px;
+               }
             }
+
             .link {
+               display: flex;
+
                * {
                   color: #e5be20;
                }
+
                span {
+                  display: block;
                   border-bottom: 1px solid transparent;
-                  line-height: 150%; /* 24px */
-                  @media screen and (max-width: 767px) {
-                     float: left;
+                  line-height: 150%;
+                  /* 24px */
+                  font-size: 12px;
+
+                  @media all and (min-width: 400px) {
+                     font-size: 14px;
+                  }
+
+                  @media all and (min-width: 992px) {
+                     font-size: 16px;
                   }
                }
+
                .arrow {
+                  display: block;
                   padding-left: 10px;
-                  @media screen and (max-width: 767px) {
-                     height: 10px;
-                     width: 10px;
-                     float: left;
-                     padding-top: 10px;
+                  height: 20px;
+                  width: 20px;
+
+                  @media all and (min-width: 400px) {
+                     height: 22px;
+                     width: 22px;
+                  }
+
+                  @media all and (min-width: 992px) {
+                     height: 24px;
+                     width: 24px;
                   }
                }
 
@@ -78,14 +152,9 @@
    }
 }
 
-.why-barasingha-wrapper  {
+.why-barasingha-wrapper {
    .owl-dots button.owl-dot {
       margin-top: 1.5rem;
-
-      @media screen and (max-width: 768px) {
-         margin-top: 0.5rem;
-      }
-
       span {
          width: 0.7rem;
          height: 0.7rem;
