--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -56,6 +56,10 @@
          align-items: center;
          backdrop-filter: blur(10px);
 
+         @media all and (min-width: 992px) {
+            padding: 40px;
+         }
+
          .image-card {
             img {
                width: 100%;
