--- a/src/components/pages/Common/Applications/products_Applications.scss
+++ b/src/components/pages/Common/Applications/products_Applications.scss
@@ -1,45 +1,85 @@
 .project_container {
-   margin-block: 180px 160px;
-   padding-bottom: 160px;
+   margin-block: 50px;
 
-   background: linear-gradient(to top, #000 0%, #00000000 100%);
-   @media screen and (max-width: 767px) {
+   @media all and (min-width: 768px) {
       margin-block: 120px;
+   }
+
+   .title-wrapper {
+      p {
+         margin-bottom: 0px;
+      }
+
+      p:nth-child(1) {
+         font-size: 12px;
+         margin-bottom: 8px;
+
+         @media all and (min-width: 400px) {}
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+
+      p:nth-child(2) {
+         font-size: 20px;
+
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
    }
 
    .projects {
       display: grid;
-      grid-template-columns: 1fr 1fr;
       gap: 2rem;
       margin-top: 3.5rem;
-      @media (max-width: 768px) {
-         grid-template-columns: 1fr;
+      grid-template-columns: 1fr;
+         
+      @media all and (min-width: 768px) {
+         grid-template-columns: 1fr 1fr;
       }
-      .project-card, .project-card1 {
-         width: auto;
-         height: 500px;
+      // }
+      .project-card {
+         width: 100%;
+         // height: 500px;
          display: flex;
          flex-direction: column;
          gap: 0.5rem;
-         padding: 2.5rem;
+         padding: 20px;
          border-radius: 1rem;
          border: 1px solid rgba(#fff, 0.05);
-         background: radial-gradient(
-            157.56% 157.56% at 50% 65.71%,
-            rgba(255, 255, 255, 0.07) 0%,
-            rgba(0, 0, 0, 0) 100%
-         );
+         background: radial-gradient(157.56% 157.56% at 50% 65.71%,
+               rgba(255, 255, 255, 0.07) 0%,
+               rgba(0, 0, 0, 0) 100%);
          backdrop-filter: blur(10px);
-         @media (max-width: 768px) {
-            height: 400px;
-            align-items: center;
+         // @media (max-width: 768px) {
+         // height: 400px;
+         align-items: center;
+         text-align: center;
+
+         @media all and (min-width: 576px) {
+            padding: 40px;
          }
+
+         @media all and (min-width: 768px) {
+            // padding: 48px;
+            text-align: left;
+            align-items: flex-start;
+         }
+         
          &:hover {
-            background: radial-gradient(
-               185.16% 185.16% at 50% 0%,
-               rgba(0, 31, 41, 0.75) 0%,
-               #022032 100%
-            ) !important;
+            background: radial-gradient(185.16% 185.16% at 50% 0%,
+                  rgba(0, 31, 41, 0.75) 0%,
+                  #022032 100%) !important;
+         }
+
+         p {
+            margin-bottom: 0px;
          }
 
          .image-card {
@@ -51,42 +91,45 @@
                aspect-ratio: 16/10;
                height: auto;
             }
-            @media (max-width: 768px) {
-               height: auto;
-               width: auto;
-            }
          }
 
          .heading {
-            font-size: 24px;
+            font-size: 16px;
             font-weight: 500;
-            max-width: 60%;
-            @media (max-width: 768px) {
-               max-width: 100%;
-               display: flex;
-               text-align: center;
+            max-width: 100%;
+
+            @media all and (min-width: 400px) {
+               font-size: 18px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 20px;
             }
          }
 
          .para {
-            max-width: 90%;
-            @media (max-width: 768px) {
-               display: flex;
-               text-align: center;
+            display: flex;
+            font-size: 12px;
+            margin-bottom: 20px;
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
             }
          }
 
-         @media screen and (max-width: 400px) {
-            .heading {
-               max-width: 90%;
-            }
+         .heading {
+            max-width: 90%;
          }
       }
-      .project-card1{
-         @media (max-width: 768px) {
-            height: 450px;
-            align-items: center;
-         }
+
+      .project-card1 {
+         // @media (max-width: 768px) {
+         height: 450px;
+         align-items: center;
+         // }
       }
    }
 }
