--- a/src/components/pages/Products/Features/Features.scss
+++ b/src/components/pages/Products/Features/Features.scss
@@ -1,8 +1,33 @@
 .features_container {
-   margin-block: 180px 160px;
    overflow: hidden;
-   @media screen and (max-width: 767px) {
-      margin-block: 120px;
+
+   .title-wrapper {
+      p {
+         margin-bottom: 0px;
+      }
+
+      p:nth-child(1) {
+         font-size: 12px;
+         margin-bottom: 8px;
+
+         @media all and (min-width: 400px) {}
+
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+
+      p:nth-child(2) {
+         font-size: 20px;
+
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
    }
 
    .features {
@@ -48,6 +73,7 @@
                &.btn-prev {
                   margin-left: -1.5rem;
                }
+
                &.btn-next {
                   margin-right: -1.5rem;
                }
@@ -56,17 +82,20 @@
                   color: #e5be20;
                   opacity: 1;
                }
+
+               &:active {
+                  border: none;
+               }
             }
          }
       }
-      // Styling Tabs
+
       .tabs {
          display: flex;
          justify-content: flex-start;
          align-items: center;
          gap: 0.5rem;
          width: 100%;
-
          -webkit-overflow-scrolling: touch;
          scrollbar-width: none;
          overflow-x: scroll;
@@ -77,6 +106,7 @@
          &::-webkit-scrollbar {
             display: none;
          }
+
          button {
             all: initial;
             font-family: inherit;
@@ -86,6 +116,15 @@
             white-space: nowrap;
             min-width: min-content;
             width: fit-content;
+            font-size: 12px;
+
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
+            }
 
             &:hover {
                color: #e5be20;
@@ -94,7 +133,7 @@
             &:active {
                border: none !important;
             }
-            
+
             &[disabled] {
                color: #e5be20;
                border-bottom: 2px solid #e5be20;
@@ -104,10 +143,8 @@
          .saperator-wrapper {
             display: grid;
             place-content: center;
-            @media screen and (max-width: 767px) {
-               // margin-left: 145px;
-            }
          }
+
          .saperator {
             display: inline-block;
             width: 1px;
@@ -126,32 +163,25 @@
       // Tab Item
       .tab-item {
          display: grid;
-         grid-template-columns: 1fr 1fr;
-         gap: 70px;
          align-items: center;
+         grid-template-columns: 1fr;
+         gap: 32px;
 
-         @media screen and (max-width: 991px) {
-            gap: 48px;
-         }
-         @media screen and (max-width: 768px) {
-            grid-template-columns: 1fr;
-            gap: 32px;
+         @media all and (min-width: 576px) {
+            grid-template-columns: 1fr 1fr;
          }
 
          .image-wrapper {
-            display: grid;
-            place-content: center;
-            padding: 2rem;
+            width: 100%;
+            overflow: hidden;
 
-            border-radius: var(--layout-marking-none, 0px) 16px 16px
-               var(--layout-marking-none, 0px);
-            border: 1px solid rgba($color: #fff, $alpha: 0.05);
-            border-left: none;
-            background: radial-gradient(
-               316.69% 130.58% at 118.36% -13.32%,
-               #131f27 0%,
-               #01121c 100%
-            );
+            img {
+               object-position: -25px 0px;
+
+               @media all and (min-width: 576px) {
+                  object-position: 0px;
+               }
+            }
          }
 
          .tab-content {
@@ -160,13 +190,48 @@
             flex-direction: column;
             gap: 1rem;
 
+            @media all and (min-width: 768px) {
+               align-self: flex-start;
+               max-width: 90%;
+            }
+
             .heading {
                font-weight: 400;
+               font-size: 18px;
+
+               @media all and (min-width: 400px) {
+                  font-size: 32px;
+               }
+
+               @media all and (min-width: 576px) {
+                  font-size: 20px;
+               }
+
+               @media all and (min-width: 992px) {
+                  font-size: 32px;
+               }
+            }
+
+            .para {
+               font-size: 12px;
+               margin-bottom: 0px;
+
+               @media all and (min-width: 400px) {
+                  font-size: 14px;
+               }
+
+               @media all and (min-width: 992px) {
+                  font-size: 16px;
+               }
             }
 
             .link {
                color: #e5be20 !important;
-               margin-top: 1rem;
+               font-size: 12px;
+
+               @media all and (min-width: 400px) {
+                  font-size: 14px;
+               }
 
                &:hover span {
                   border-bottom: 1px solid #e5be20;
@@ -179,6 +244,7 @@
          }
       }
    }
+
    .bg {
       position: absolute;
       max-width: 400px;
@@ -190,10 +256,11 @@
       right: 0px;
       opacity: 0.3;
       background-repeat: no-repeat;
-      background-position:right;
+      background-position: right;
       pointer-events: none;
       overflow: hidden;
-      img { 
+
+      img {
          height: auto;
          max-width: none;
          position: absolute;
